--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.20.0-nullsafety.3
+  sticky_headers: "^0.1.8"
 
 dev_dependencies:
   flutter_test:
