--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.20.0-nullsafety.3
-  sticky_headers: "^0.1.8"
+  provider: ^5.0.0
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
 
 dev_dependencies:
   flutter_test:
