--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.20.0-nullsafety.3
   provider: ^5.0.0
+  firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
   cloud_firestore: ^2.2.2
 
